(version 1.0.2) correctifs + améliorations (exportation OPML, système de tâche, système de journalisation)

--- a/lecteur/lecteur.html
+++ b/lecteur/lecteur.html
@@ -9,6 +9,7 @@
 <style type="text/css"> 
 
 </style> 
+<script type="text/javascript" src="./opml.js"></script> 
 <script type="text/javascript" src="./lecteur.js"></script> 
 </head>
 <body> 
@@ -112,6 +113,19 @@
 			Vous pouvez désactiver les flux pour ne plus les récupérer. Vous pouvez également supprimer le flux en cochant la case "flux à supprimer" : les articles associés ne seront pas supprimés.
 		</p>
 		<div class="liste"></div> 
+	</section> 
+	<section id="opml"> 
+		<h1>Exporter les flux enregistrés</h1> 
+		<p class="description"> 
+			En fonction du nombre de flux présents dans votre base, cette action peut prendre un peu de temps. Ne fermez pas la page avant le démarrage du téléchargement ! 
+		</p> 
+		<form> 
+			<input type="submit" value="préparer le fichier OPML au téléchargement" /> 
+		</form>
+		<h1>Importer des flux</h1> 
+		<p class="description"> 
+			Cette fonctionnalité est encore en cours de développement. 
+		</p> 
 	</section> 
 </style> 
 
