(version 1.0.6b) fin du développement de l'outil d'export et d'import OPML; améliorations graphiques; débug (doublons) dans le récupérateur automatique de flux RSS durant la navigation web

--- a/pages/lecteur/index.gabarit.html
+++ b/pages/lecteur/index.gabarit.html
@@ -5,7 +5,6 @@
 <title>Nothus-Veille - lecteur de flux RSS</title>
 <link href="./pages/lecteur/page.css" rel="stylesheet" type="text/css" />
 <script type="text/javascript" src="./modules/favorissync.module.js"></script> 
-<script type="text/javascript" src="./modules/opml.module.js"></script> 
 <script type="text/javascript" src="./pages/lecteur/page.js"></script> 
 </head>
 <body> 
@@ -94,7 +93,7 @@
 		</p>
 		<div class="liste"></div> 
 	</section> 
-	<section id="opml"> 
+	<!--section id="opml"> 
 		<h1>Exporter les flux enregistrés</h1> 
 		<p class="description"> 
 			En fonction du nombre de flux présents dans votre base, cette action peut prendre un peu de temps. Ne fermez pas la page avant le démarrage du téléchargement ! 
@@ -106,7 +105,7 @@
 		<p class="description"> 
 			Cette fonctionnalité est encore en cours de développement. 
 		</p> 
-	</section> 
+	</section--> 
 </style> 
 
 <style type="text/html" gabarit="modifierFlux"> 
