--- a/pages/aide/index.gabarit.html
+++ b/pages/aide/index.gabarit.html
@@ -13,24 +13,83 @@
 	<h1>Cette zone est encore en cours de développement.</h1> 
 	<p>Cependant quelques réponses peuvent déjà vous êtes apportées...</p> 
 
-	<h3>Quelle est la vocation de ce module ?</h3> 
-	<p>Aujourd'hui le module récupére et gérer des flux RSS. D'ici peu, des pages peuvent être suivies ainsi que des fonctionnalité autour de la veille et du renseignement économique.</p> 
 
-	<h3>Garantie t-il le respect de ma vie privée ? Que reccueille t-il sur moi, sur mes usages ?</h3> 
-	<p>Le module ne dispose d'aucun système automatique, semi-automatique... et même pas automatique du tout ! sur qui fait quoi avec. Ni maintenant, ni jamais ! Cependant il reccueille des informations d'autres sites qui, eux, peuvent reccueillir des informations sur vous : le plus simple est de voir directement avec eux.</p> 
 
-	<h3>Quelles sont les conditions d'usage de ce module ? Quelle licence ?</h3> 
-	<p>Volontairement ce module n'a pas de licence spécifique. Cependant une limitation et une seule existe et concerne la gratuité : l'utilisation est libre et sans frais à la seule condition d'un usage personnel, à but familiale. En dehors de ce cadre, le paiement d'une licence par personne et sans limite de postes, pour un an, est due.<br />Pour l'instant, l'outil est en phase <i>alpha</i>, c'est-à-dire instable et évoluant très rapidement : aucune licence n'est obligatoire pour aucun usage.<br />Quelque soit votre statut, avec ou sans licence, le code source du module reste ma propriété : la réutilisation, totale ou partielle de ce même code, même modifié, n'est pas admise sans contribution financière.</p> 
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Quelle est la vocation de ce module ?
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Aujourd'hui le module récupére et gérer des flux RSS. D'ici peu, des pages peuvent être suivies ainsi que des fonctionnalité autour de la veille et du renseignement économique. 
+			</p> 
+		</span> 
+	</div> 
 
-	<h3>Comment savoir si une licence est en cours si rien n'est renvoyé au propriétaire du module ?!</h3> 
-	<p>Je ne peux pas vérifier l'usage ni la véracité des informations fournies lors d'une demande de licence. Ni un usage est fait malgré les réserves concernant la gratuité. Ni maintenant, ni jamais. Internet est le royaume d'une confiance parfois aveugle mais le respect strict de l'anonymat n'est pas effectivement possible autrement.</p> 
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Garantie t-il le respect de ma vie privée ? Que reccueille t-il sur moi, sur mes usages ?
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Le module ne dispose d'aucun système automatique, semi-automatique... et même pas automatique du tout ! sur qui fait quoi avec. Ni maintenant, ni jamais ! Cependant il reccueille des informations d'autres sites qui, eux, peuvent reccueillir des informations sur vous : le plus simple est de voir directement avec eux.
+			</p> 
+		</span> 
+	</div> 
 
-	<h3>Qui est l'auteur ?</h3> 
-	<p>Julien Garderon, un citoyen français de Nouvelle-Aquitaine, sur son temps libre. Mon compte <a href="http://julien-garderon.developpez.com/">Developpez.com</a> et mon compte <a href="https://twitter.com/intelligencepol">Twitter</a> sont à votre disposition...</p> 
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Quelles sont les conditions d'usage de ce module ? Quelle licence ?
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Volontairement ce module n'a pas de licence spécifique. Cependant une limitation et une seule existe et concerne la gratuité : l'utilisation est libre et sans frais à la seule condition d'un usage personnel, à but familiale. En dehors de ce cadre, le paiement d'une licence par personne et sans limite de postes, pour un an, est due.
+			</p> 
+			<p> 
+				Pour l'instant, l'outil est en phase <i>alpha</i>, c'est-à-dire instable et évoluant très rapidement : aucune licence n'est obligatoire pour aucun usage.<br />Quelque soit votre statut, avec ou sans licence, le code source du module reste ma propriété : la réutilisation, totale ou partielle de ce même code, même modifié, n'est pas admise sans contribution financière.
+			</p> 
+		</span> 
+	</div> 
 
-	<h3>Est-il possible de contribuer ou d'aider le projet ?</h3> 
-	<p>Oui, en consultant et en participant au code source du module disponible <a href="https://github.com/JGarderon/Nothus-Veille/">sur GitHub</a> ou en <a href="https://twitter.com/intelligencepol">me contactant</a>. Evidemment les dons monétaires sont très appréciés ! ;)</p> 
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Comment savoir si une licence est en cours si rien n'est renvoyé au propriétaire du module ?! 
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Je ne peux pas vérifier l'usage ni la véracité des informations fournies lors d'une demande de licence. Ni un usage est fait malgré les réserves concernant la gratuité. Ni maintenant, ni jamais. Internet est le royaume d'une confiance parfois aveugle mais le respect strict de l'anonymat n'est pas effectivement possible autrement.
+			</p> 
+		</span> 
+	</div> 
 
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Qui est l'auteur ? 
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Julien Garderon, un citoyen français de Nouvelle-Aquitaine, sur son temps libre. Mon compte <a href="http://julien-garderon.developpez.com/">Developpez.com</a> et mon compte <a href="https://twitter.com/intelligencepol">Twitter</a> sont à votre disposition...
+			</p> 
+		</span> 
+	</div> 
+
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
+			Est-il possible de contribuer ou d'aider le projet ? 
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Oui, en consultant et en participant au code source du module disponible <a href="https://github.com/JGarderon/Nothus-Veille/">sur GitHub</a> ou en <a href="https://twitter.com/intelligencepol">me contactant</a>. Evidemment les dons monétaires sont très appréciés ! ;) 
+			</p> 
+		</span> 
+	</div>
+	
 </div> 
 
 </body>
