--- a/pages/aide/index.gabarit.html
+++ b/pages/aide/index.gabarit.html
@@ -42,6 +42,22 @@
 	<div class="titraille">
 		<h1> 
 			<span class="interrogation">?</span> 
+			Est-il compatible avec des réseaux type "ognion", type TOR, afin de garantir mon anonymat sur Internet ? 
+		</h1> 
+		<span class="texte"> 
+			<p> 
+				Oui, cependant le navigateur TOR, issu du travail de la fondation Mozilla, est sur une base particulièrement de Firefox (ESR, version 45). Les Web Extension commencent à supporter avec la version 48 !<br /> 
+				Pour l'utilisation facilitée du module, préférez donc un navigateur plus récent (dans l'attente d'un Firefox ESR de niveau au moins 48) et l'utilisation d'un proxy TOR, qui vous anonynimise davantage et pour l'ensemble des connexions de votre ordinateur. 
+			</p> 
+			<p>
+				Rappel : l'anonymat permanent, complet et absolu n'est pas ou quasi-pas possible sur Internet (une croyance pourtant fort répandue). Les ressources d'une surveillance, publique ou privée, quelque soit le but, ne sont pas seulement informatiques mais peuvent être aussi d'ingénierie sociale et des sources type policières. 
+			</p> 
+		</span> 
+	</div> 
+
+	<div class="titraille">
+		<h1> 
+			<span class="interrogation">?</span> 
 			Quelles sont les conditions d'usage de ce module ? Quelle licence ?
 		</h1> 
 		<span class="texte"> 
