(version 1.1.4) correctifs de compabilité entre Google Chrome et Mozilla Firefox ; la version 1.1.3 (publiée) est abandonnée

--- a/gabarit.html
+++ b/gabarit.html
@@ -24,6 +24,9 @@
 		<li> 
 			<a href="?page=sources" page="sources">sources</a> 
 		</li> 
+		<li> 
+			<a href="?page=notes" page="notes">notes</a> 
+		</li> 
 		<!--li> 
 			<a href="#" page="options">options</a> 
 		</li-->
