(version 1.1.5) implémentation de l'outil de notes et de rapports en mode alpha

--- a/gabarit.html
+++ b/gabarit.html
@@ -89,7 +89,11 @@
 			<span class="titre"> 
 				<span class="suivi" suivi="{{articleSuiviEtat}}" articleId="{{id}}">
 					&#9733; 
-				</span> <a href="{{articleLien}}" target="_blank" articleId="{{id}}"> 
+				</span> 
+				<a class="note" href="?page=notes#nouvelleNote/articleId:{{id}}"> 
+					&#128393; 
+				</a> 
+				<a class="titre" href="{{articleLien}}" target="_blank" articleId="{{id}}"> 
 					{{articleTitre}} 
 				</a> 
 			</span> 
