--- a/routines/routines.html
+++ b/routines/routines.html
@@ -1,9 +1,8 @@
 <!DOCTYPE html><html><head><meta charset="utf-8"></head>
   <body>
     <script type="text/javascript" src="./communes.js"></script>
-    <script type="text/javascript" src="./installation.js"></script>
-    <script type="text/javascript" src="./actif.js"></script>
     <script type="text/javascript" src="./optimisations.js"></script>
-    <script type="text/javascript" src="./statistiques.js"></script>
     <script type="text/javascript" src="./recuperation-flux.js"></script>
+    <script type="text/javascript" src="./installation.js"></script>
+    <script type="text/javascript" src="./dialogues.js"></script>
 </body></html>
